--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,191 @@
-# requirements.txt
-qiskit[visualization]>=1.0
-qiskit-ibm-runtime>=0.22
-scipy
-rustworkx
-nbconvert
-jupyter
-qiskit-aer
-redis
-
+annotated-types==0.6.0
+anyio==4.2.0
+apistar==0.7.2
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asgiref==3.7.2
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==23.2.0
+autograd==1.6.2
+autoray==0.6.8
+Babel==2.15.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bleach==6.1.0
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==3.0.0
+comm==0.2.1
+contourpy==1.2.0
+cryptography==42.0.7
+cycler==0.12.1
+dask==2024.6.2
+debugpy==1.8.0
+decorator==5.1.1
+defusedxml==0.7.1
+dill==0.3.8
+distributed==2024.6.2
+distro==1.9.0
+Django==5.0.1
+django-cors-headers==4.3.1
+djangorestframework==3.14.0
+docopt==0.6.2
+EQSN==0.0.8
+executing==2.0.1
+fastjsonschema==2.19.1
+fonttools==4.47.2
+fqdn==1.5.1
+fsspec==2024.6.1
+future==0.18.3
+h11==0.14.0
+httpcore==1.0.2
+httpx==0.26.0
+ibm-cloud-sdk-core==3.20.0
+ibm-platform-services==0.53.6
+idna==3.6
+interlin-q==0.0.1.post5
+ipykernel==6.29.0
+ipython==8.12.3
+ipywidgets==8.1.2
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.4
+json5==0.9.25
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
 jupyter_client==8.6.0
 jupyter_core==5.7.1
-
+jupyter_server==2.14.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.1
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+jupyterlab_widgets==3.0.10
+kiwisolver==1.4.5
 load-dotenv==0.1.0
+locket==1.0.0
+logging==0.4.9.6
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib==3.8.2
 matplotlib-inline==0.1.6
-
+mdurl==0.1.2
+mistune==3.0.2
+mpmath==1.3.0
+msgpack==1.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+netqasm==0.13.3
 networkx==3.2.1
+notebook==7.2.0
+notebook_shim==0.2.4
 numpy==1.26.3
 openai==1.9.0
+overrides==7.7.0
 packaging==23.2
 pandas==2.2.0
+pandocfilters==1.5.1
+parso==0.8.3
+partd==1.4.2
+pathvalidate==3.2.0
+pbr==6.0.0
 PennyLane==0.34.0
 PennyLane-Lightning==0.34.0
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.2.0
+pipreqs==0.5.0
+platformdirs==4.2.0
+prometheus_client==0.20.0
+prompt-toolkit==3.0.43
+psutil==5.9.8
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pycparser==2.22
+pydantic==2.7.3
+pydantic-settings==2.3.2
+pydantic_core==2.18.4
+pydot==2.0.0
+Pygments==2.17.2
+PyJWT==2.8.0
+pylatexenc==2.10
+pyparsing==3.1.1
+pyspnego==0.10.2
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-json-logger==2.0.7
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.2
+qiskit==1.1.1
+qiskit-aer==0.14.1
+qiskit-ibm-runtime==0.23.0
+qlink-interface==1.0.0
+qne-adk==0.4.0
+qtconsole==5.5.2
+QtPy==2.4.1
+qunetsim==0.1.3.post1
+redis==5.0.7
+referencing==0.35.1
+requests==2.31.0
+requests-ntlm==1.2.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.1
 rustworkx==0.14.0
 scipy==1.12.0
 seaborn==0.13.2
-
-
-dask[distributed]==2024.6.2
+semantic-version==2.10.0
+Send2Trash==1.8.3
+setuptools==72.1.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+sqlparse==0.4.4
+stack-data==0.6.3
+stevedore==5.2.0
+symengine==0.11.0
+sympy==1.12
+tabulate==0.9.0
+tblib==3.0.0
+terminado==0.18.1
+tinycss2==1.3.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typesystem==0.2.4
+typing_extensions==4.9.0
+tzdata==2023.4
+uri-template==1.3.0
+urllib3==2.2.0
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.43.0
+widgetsnbextension==4.0.10
+yarg==0.1.9
+zict==3.0.0
